--- a/SuggestionBoard.Domain/SuggestionBoard.Domain.csproj
+++ b/SuggestionBoard.Domain/SuggestionBoard.Domain.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SuggestionBoard.Core\SuggestionBoard.Core.csproj" />
   </ItemGroup>
 
