(#10) Suggestion controller created

--- a/SuggestionBoard.Web/appsettings.json
+++ b/SuggestionBoard.Web/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source={HostMachineIpAddress};Initial Catalog=SuggestionBoard;User Id=sa;Password=Pass@word;MultipleActiveResultSets=true"
+  "ConnectionStrings": {   
+    "DefaultConnection": "Data Source={HostMachineIpAddress};Initial Catalog=SuggestionBoard;User Id=sa;Password=1;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
