#2 : Serilog and ELK stack added

--- a/SuggestionBoard.Web/appsettings.Development.json
+++ b/SuggestionBoard.Web/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+    "ConnectionStrings": {   
+        "DefaultConnection": "Data Source={HostMachineIpAddress};Initial Catalog=SuggestionBoard;User Id=sa;Password=Pass@word;MultipleActiveResultSets=true"
+    },
+    "AllowedHosts": "*"
 }
