--- a/SuggestionBoard.Web/appsettings.json
+++ b/SuggestionBoard.Web/appsettings.json
@@ -1,13 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {   
+    "DefaultConnection": "Data Source={HostMachineIpAddress};Initial Catalog=SuggestionBoard;User Id=sa;Password=Pass@word;MultipleActiveResultSets=true"
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
   },
-  "ConnectionStrings": {   
-    "DefaultConnection": "Data Source={HostMachineIpAddress};Initial Catalog=SuggestionBoard;User Id=sa;Password=1;MultipleActiveResultSets=true"
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
   },
   "AllowedHosts": "*"
 }
