--- a/SuggestionBoard.Data/SuggestionBoard.Data.csproj
+++ b/SuggestionBoard.Data/SuggestionBoard.Data.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\SuggestionBoard.Domain\SuggestionBoard.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
